gramatica_v4Parser.py
# Generated from gramatica_v4.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'import'", "<INVALID>", "'Program'", 
                     "'End_Program'", "'print'", "'{'", "'}'", "'simon'", 
                     "'sinel'", "'switch'", "'case'", "'default'", "'struct'", 
                     "'while'", "'break'", "'continue'", "'for'", "'return'", 
                     "'('", "')'", "'['", "']'", "<INVALID>", "'!'", "'*'", 
                     "'%'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "','", 
                     "'.'", "':'", "'?'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IMPORT", "TIPO", "INICIOPROGRAMA", 
                      "FINPROGRAMA", "PRINTI", "BLOCKI", "BLOCKF", "IFINICIO", 
                      "ELSE", "SWITCH", "CASE", "DEFAULT", "STRUCT", "WHILE", 
                      "BREAK", "CONTINUE", "FOR", "RETURN", "PARENTESISI", 
                      "PARENTESISD", "CORCHI", "CORCHD", "BOOLEANO", "NOTLOGICO", 
                      "MULT", "MOD", "DIV", "SUM", "REST", "IGUALA", "DIFERENTEA", 
                      "DIFERENTEA2", "MENORQUE", "MAYORQUE", "MENORIGUAL", 
                      "MAYORIGUAL", "AND", "OR", "COMA", "PUNTO", "COLON", 
                      "QUESTION", "NUMERO", "STRING", "WS", "ID", "ASSIGN" ]

    RULE_archivo = 0
    RULE_importStatement = 1
    RULE_instruccion = 2
    RULE_declaracion = 3
    RULE_asignacion = 4
    RULE_returnStmt = 5
    RULE_funcionDecl = 6
    RULE_params = 7
    RULE_structDecl = 8
    RULE_structFieldDecl = 9
    RULE_whileStatement = 10
    RULE_forStatement = 11
    RULE_block = 12
    RULE_ifStatement = 13
    RULE_switchStatement = 14
    RULE_caseClause = 15
    RULE_defaultClause = 16
    RULE_lvalue = 17
    RULE_expresion = 18
    RULE_args = 19

    ruleNames =  [ "archivo", "importStatement", "instruccion", "declaracion", 
                   "asignacion", "returnStmt", "funcionDecl", "params", 
                   "structDecl", "structFieldDecl", "whileStatement", "forStatement", 
                   "block", "ifStatement", "switchStatement", "caseClause", 
                   "defaultClause", "lvalue", "expresion", "args" ]

    EOF = Token.EOF
    T__0=1
    IMPORT=2
    TIPO=3
    INICIOPROGRAMA=4
    FINPROGRAMA=5
    PRINTI=6
    BLOCKI=7
    BLOCKF=8
    IFINICIO=9
    ELSE=10
    SWITCH=11
    CASE=12
    DEFAULT=13
    STRUCT=14
    WHILE=15
    BREAK=16
    CONTINUE=17
    FOR=18
    RETURN=19
    PARENTESISI=20
    PARENTESISD=21
    CORCHI=22
    CORCHD=23
    BOOLEANO=24
    NOTLOGICO=25
    MULT=26
    MOD=27
    DIV=28
    SUM=29
    REST=30
    IGUALA=31
    DIFERENTEA=32
    DIFERENTEA2=33
    MENORQUE=34
    MAYORQUE=35
    MENORIGUAL=36
    MAYORIGUAL=37
    AND=38
    OR=39
    COMA=40
    PUNTO=41
    COLON=42
    QUESTION=43
    NUMERO=44
    STRING=45
    WS=46
    ID=47
    ASSIGN=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ArchivoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIOPROGRAMA(self):
            return self.getToken(gramatica_v4Parser.INICIOPROGRAMA, 0)

        def FINPROGRAMA(self):
            return self.getToken(gramatica_v4Parser.FINPROGRAMA, 0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ImportStatementContext,i)


        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.InstruccionContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.InstruccionContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_archivo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArchivo" ):
                return visitor.visitArchivo(self)
            else:
                return visitor.visitChildren(self)




    def archivo(self):

        localctx = gramatica_v4Parser.ArchivoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_archivo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 40
                self.importStatement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(gramatica_v4Parser.INICIOPROGRAMA)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 193514103098056) != 0):
                self.state = 47
                self.instruccion()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(gramatica_v4Parser.FINPROGRAMA)
            self.state = 54
            self.match(gramatica_v4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(gramatica_v4Parser.IMPORT, 0)

        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_importStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = gramatica_v4Parser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(gramatica_v4Parser.IMPORT)
            self.state = 57
            self.match(gramatica_v4Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_instruccion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InstruccionSwitchContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def switchStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.SwitchStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionSwitch" ):
                return visitor.visitInstruccionSwitch(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionExpresionContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expresion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExpresionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionExpresion" ):
                return visitor.visitInstruccionExpresion(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionForContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ForStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionFor" ):
                return visitor.visitInstruccionFor(self)
            else:
                return visitor.visitChildren(self)


    class EjecutarPrintContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTI(self):
            return self.getToken(gramatica_v4Parser.PRINTI, 0)
        def PARENTESISI(self):
            return self.getToken(gramatica_v4Parser.PARENTESISI, 0)
        def expresion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExpresionContext,0)

        def PARENTESISD(self):
            return self.getToken(gramatica_v4Parser.PARENTESISD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEjecutarPrint" ):
                return visitor.visitEjecutarPrint(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionWhileContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.WhileStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionWhile" ):
                return visitor.visitInstruccionWhile(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionReturnContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ReturnStmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionReturn" ):
                return visitor.visitInstruccionReturn(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionBloqueContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionBloque" ):
                return visitor.visitInstruccionBloque(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionIfContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.IfStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionIf" ):
                return visitor.visitInstruccionIf(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStmtContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTINUE(self):
            return self.getToken(gramatica_v4Parser.CONTINUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStmt" ):
                return visitor.visitContinueStmt(self)
            else:
                return visitor.visitChildren(self)


    class EjecutarAsignacionContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def asignacion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.AsignacionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEjecutarAsignacion" ):
                return visitor.visitEjecutarAsignacion(self)
            else:
                return visitor.visitChildren(self)


    class BreakStmtContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(gramatica_v4Parser.BREAK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionDeclaracionContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaracion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DeclaracionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionDeclaracion" ):
                return visitor.visitInstruccionDeclaracion(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionFuncionContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcionDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.FuncionDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionFuncion" ):
                return visitor.visitInstruccionFuncion(self)
            else:
                return visitor.visitChildren(self)


    class InstruccionStructContext(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionStruct" ):
                return visitor.visitInstruccionStruct(self)
            else:
                return visitor.visitChildren(self)



    def instruccion(self):

        localctx = gramatica_v4Parser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = gramatica_v4Parser.InstruccionDeclaracionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.declaracion()
                pass

            elif la_ == 2:
                localctx = gramatica_v4Parser.EjecutarAsignacionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.asignacion()
                pass

            elif la_ == 3:
                localctx = gramatica_v4Parser.EjecutarPrintContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(gramatica_v4Parser.PRINTI)
                self.state = 62
                self.match(gramatica_v4Parser.PARENTESISI)
                self.state = 63
                self.expresion(0)
                self.state = 64
                self.match(gramatica_v4Parser.PARENTESISD)
                pass

            elif la_ == 4:
                localctx = gramatica_v4Parser.InstruccionSwitchContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.switchStatement()
                pass

            elif la_ == 5:
                localctx = gramatica_v4Parser.InstruccionIfContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 67
                self.ifStatement()
                pass

            elif la_ == 6:
                localctx = gramatica_v4Parser.InstruccionWhileContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.whileStatement()
                pass

            elif la_ == 7:
                localctx = gramatica_v4Parser.InstruccionForContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 69
                self.forStatement()
                pass

            elif la_ == 8:
                localctx = gramatica_v4Parser.InstruccionReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 70
                self.returnStmt()
                pass

            elif la_ == 9:
                localctx = gramatica_v4Parser.InstruccionFuncionContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 71
                self.funcionDecl()
                pass

            elif la_ == 10:
                localctx = gramatica_v4Parser.InstruccionStructContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 72
                self.structDecl()
                pass

            elif la_ == 11:
                localctx = gramatica_v4Parser.InstruccionExpresionContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 73
                self.expresion(0)
                pass

            elif la_ == 12:
                localctx = gramatica_v4Parser.BreakStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 74
                self.match(gramatica_v4Parser.BREAK)
                pass

            elif la_ == 13:
                localctx = gramatica_v4Parser.ContinueStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 75
                self.match(gramatica_v4Parser.CONTINUE)
                pass

            elif la_ == 14:
                localctx = gramatica_v4Parser.InstruccionBloqueContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 76
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_v4Parser.TIPO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.ID)
            else:
                return self.getToken(gramatica_v4Parser.ID, i)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ExpresionContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ExpresionContext,i)


        def CORCHI(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.CORCHI)
            else:
                return self.getToken(gramatica_v4Parser.CORCHI, i)

        def CORCHD(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.CORCHD)
            else:
                return self.getToken(gramatica_v4Parser.CORCHD, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.COMA)
            else:
                return self.getToken(gramatica_v4Parser.COMA, i)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_declaracion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = gramatica_v4Parser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(gramatica_v4Parser.TIPO)
                self.state = 80
                self.match(gramatica_v4Parser.ID)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==48:
                    self.state = 81
                    self.match(gramatica_v4Parser.ASSIGN)
                    self.state = 82
                    self.expresion(0)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(gramatica_v4Parser.TIPO)
                self.state = 86
                self.match(gramatica_v4Parser.CORCHI)
                self.state = 87
                self.match(gramatica_v4Parser.CORCHD)
                self.state = 88
                self.match(gramatica_v4Parser.ID)
                self.state = 89
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 90
                self.match(gramatica_v4Parser.CORCHI)
                self.state = 91
                self.expresion(0)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==40:
                    self.state = 92
                    self.match(gramatica_v4Parser.COMA)
                    self.state = 93
                    self.expresion(0)
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(gramatica_v4Parser.CORCHD)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.match(gramatica_v4Parser.ID)
                self.state = 102
                self.match(gramatica_v4Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(gramatica_v4Parser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExpresionContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = gramatica_v4Parser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.lvalue()
            self.state = 106
            self.match(gramatica_v4Parser.ASSIGN)
            self.state = 107
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(gramatica_v4Parser.RETURN, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExpresionContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = gramatica_v4Parser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(gramatica_v4Parser.RETURN)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 110
                self.expresion(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(gramatica_v4Parser.TIPO, 0)

        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def PARENTESISI(self):
            return self.getToken(gramatica_v4Parser.PARENTESISI, 0)

        def PARENTESISD(self):
            return self.getToken(gramatica_v4Parser.PARENTESISD, 0)

        def block(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ParamsContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_funcionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionDecl" ):
                return visitor.visitFuncionDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcionDecl(self):

        localctx = gramatica_v4Parser.FuncionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(gramatica_v4Parser.TIPO)
            self.state = 114
            self.match(gramatica_v4Parser.ID)
            self.state = 115
            self.match(gramatica_v4Parser.PARENTESISI)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 116
                self.params()


            self.state = 119
            self.match(gramatica_v4Parser.PARENTESISD)
            self.state = 120
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.TIPO)
            else:
                return self.getToken(gramatica_v4Parser.TIPO, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.ID)
            else:
                return self.getToken(gramatica_v4Parser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.COMA)
            else:
                return self.getToken(gramatica_v4Parser.COMA, i)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):
